--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+
+*/manifest/secret*.yaml
+*/manifest/config*.yaml
+
 # Runtime data
 pids
 *.pid
