--- a/Deploy/package.json
+++ b/Deploy/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "build": "tsc -b"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +14,8 @@
     "@types/node": "^24.3.0",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
