--- a/Upload/package.json
+++ b/Upload/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc -b",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,9 @@
     "express": "^5.1.0",
     "redis": "^5.8.1",
     "simple-git": "^3.28.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/node": "^18.0.0"
   }
 }
