--- a/Jenkins/JenkinsFile
+++ b/Jenkins/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
 
     stages{
         stage('testing'){
-            step{
+            steps{
                 sh 'echo "hello world"'
             }
         }
