adding creds console log

--- a/Jenkins/JenkinsFile
+++ b/Jenkins/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_CREDENTIALS = credentials('rohithvarma- Dockerhub')
+        DOCKER_CREDENTIALS = credentials('dockerhub-creds')
     }
 
     stages {
