--- a/Jenkins/JenkinsFile
+++ b/Jenkins/JenkinsFile
@@ -8,12 +8,15 @@ pipeline {
     stages {
         stage('Docker Login'){
             steps{
-                sh 'echo "Login to Docker Hub"'
-                sh '''
-                    echo "Docker Credentials:"
-                    echo "Username: ${DOCKER_CREDENTIALS_USR}"
-                    echo "Password: ${DOCKER_CREDENTIALS_PSW}"
-                '''
+                sh 'docker login -u $DOCKER_CREDENTIALS_USR -p $DOCKER_CREDENTIALS_PSD'
+            }
+            post{
+                success{
+                    sh 'echo "Login to Docker Hub successful"'
+                }
+                failure{
+                    sh 'echo "Login to Docker Hub failed"'
+                }
             }
         }
     }
